# Ignosi

./: CMakeLists.txt  CMakePresets.json  README.md  azure-pipelines.yml  vcpkg-configuration.json  vcpkg.json
cmake/: CopyDlls.cmake  arm64-osx-gcc.toolchain.cmake
container/: CMakeLists.txt
container/lib/: CMakeLists.txt  ring_buffer.hpp
container/test/: CMakeLists.txt  ring_buffer_tests.cpp
demos/: CMakeLists.txt
demos/empty/: CMakeLists.txt  main.cpp
dll/: CMakeLists.txt
dll/lib/: CMakeLists.txt  bool.h  handle.h  pointer_handle_manager.h
dll/test/: CMakeLists.txt  pointer_handle_manager_tests.cpp
ecs/: CMakeLists.txt
ecs/lib/: CMakeLists.txt  component.h  entity.cpp  entity.h  query.cpp  query.h  type_id.h  world.cpp  world.h
ecs/test/: CMakeLists.txt  system_tests.cpp  world_tests.cpp
math/: CMakeLists.txt
math/lib/: CMakeLists.txt  float_compare.hpp  square_matrix.hpp  vector.hpp
math/test/: CMakeLists.txt  matrix_tests.cpp  vector_tests.cpp
memory/: CMakeLists.txt
memory/lib/: CMakeLists.txt  allocate.cpp  allocate.h  allocator.hpp  dll_allocate.cpp  dll_new.cpp  dll_new.h  dll_object_pool.hpp  i_object_pool.h  new.cpp  object_pool.cpp  object_pool.h  object_pool.hpp
memory/lib/detail/: dll_object_pool_data.h  object_pool_impl.cpp  object_pool_impl.h
memory/test/: CMakeLists.txt  dll_allocate_tests.cpp  dll_object_pool_tests.cpp
render/: CMakeLists.txt  irenderer.cpp  irenderer.h  ivertex_buffer.h  vertex_data_config.h
render/camera/: camera.cpp  camera.h  camera_2d.cpp  camera_2d.h  camera_fly.cpp  camera_fly.h
render/lighting/: light.h  light_attenuation.h  light_directional.h  light_point.h  light_spotlight.h
render/objects/: generic_vertexes.hpp  mesh.cpp  mesh.h  sprite_vertex_data.h  vertex_data.h
render/opengl/: opengl_renderer.cpp  opengl_renderer.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h
render/opengl/Texture/: opengl_texture.cpp  opengl_texture.h
render/opengl/shader/: compute_opengl_shader.cpp  compute_opengl_shader.h  fragment_opengl_shader.cpp  fragment_opengl_shader.h  geometry_opengl_shader.cpp  geometry_opengl_shader.h  opengl_shader.cpp  opengl_shader.h  opengl_shader_program.cpp  opengl_shader_program.h  vertex_opengl_shader.cpp  vertex_opengl_shader.h
render/shader/: ishader.h  ishader_program.h  preprocessor.cpp  preprocessor.h  shader.cpp  shader.h
render/shader/glsl/: light.frag  light_attenuation.frag  light_directional.frag  light_point.frag  light_spotlight.frag  material.frag
render/texture/: color.cpp  color.h  color_rgb.cpp  color_rgb.h  iimage_file.h  image_file.cpp  image_file.h  imaterial.h  itexture.h  material.cpp  material.h  texture.cpp  texture.h
string/: CMakeLists.txt
string/lib/: CMakeLists.txt  string_literal.h
string/test/: CMakeLists.txt  string_literal_tests.cpp
system/: CMakeLists.txt
system/window/: window.cpp  window.h  window_size.h
system/window/detail/: glfw_window.cpp  glfw_window.h  iwindow.h
templates/: build-app.yml  build-test.yml  install-dependencies.yml  test-app.yml
units/: CMakeLists.txt
units/lib/: CMakeLists.txt  angle.hpp  angular_acceleration.hpp  angular_velocity.hpp  degree.hpp  minute.hpp  radian.hpp  second.hpp  time.hpp  unit.hpp
units/test/: CMakeLists.txt  angle_units_tests.cpp
